# fwh_sensor_monitoring

./: .gitignore  CLAUDE.md  README.md  USER_GUIDE.md  agent.py  agent_registry.py  conftest.py  pyproject.toml  requirements.txt
agent-spec/: cache-layout.agent-spec.yaml  tools-pattern.agent-spec.yaml
src/sensor_monitoring/: __init__.py  catalog.py  catalog.yaml
src/sensor_monitoring/ffl/: monitor.ffl  monitor.json
src/sensor_monitoring/handlers/: __init__.py
src/sensor_monitoring/handlers/analysis/: analysis_handlers.py
src/sensor_monitoring/handlers/ingestion/: ingestion_handlers.py
src/sensor_monitoring/handlers/reporting/: reporting_handlers.py
src/sensor_monitoring/handlers/shared/: sensor_utils.py
src/sensor_monitoring/tools/: README.md  __init__.py  classify-alert.sh  classify_alert.py  detect-anomaly.sh  detect_anomaly.py  generate-summary.sh  generate_summary.py  ingest-reading.sh  ingest_reading.py  run-diagnostics.sh  run_diagnostics.py  validate-reading.sh  validate_reading.py
src/sensor_monitoring/tools/_lib/: __init__.py  sensor.py
tests/: conftest.py  test_catalog_manifest.py  test_ffl_compiles.py  test_sensor_handlers.py
