[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-monitoring"
version = "0.1.0"
description = "Sensor monitoring example for Facetwork — deterministic stub handlers for ingest/validate/analyze/report on time-series sensor data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Ralph Lemke"}]
keywords = ["facetwork", "ffl", "sensor", "monitoring", "iot", "anomaly-detection"]

dependencies = [
    "facetwork>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/rlemke/fwh_sensor_monitoring"

[project.entry-points."facetwork.examples"]
sensor-monitoring = "sensor_monitoring:example"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sensor_monitoring = [
    "ffl/*.ffl",
    "ffl/*.json",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "E402", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
